force-app/main/default/objects/SPEN_Inspection_Item__c/SPEN_Inspection_Item__c.object-meta.xml
<CustomObject>
    <description>Inspection Item object to represent individual inspection records, looks up to overview Inspection object. To be used in Compliance Stores solution.</description>
    <label>Inspection Item</label>
    <nameField>
        <displayFormat>INSPI-{YYYY}{MM}-{00000}</displayFormat>
        <label>Inspection Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspection Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>