force-app/main/default/objects/SPEN_Inspection_Item__c/fields/SPEN_Date_Performed__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Date_Performed__c</fullName>
    <formula>SPEN_Inspection__r.SPEN_Date_Performed__c</formula>
    <label>Date Performed</label>
    <type>Date</type>
</CustomField>