force-app/main/default/objects/SPEN_Inspection_Item__c/fields/SPEN_Inspected_By_c__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Inspected_By_c__c</fullName>
    <formula>SPEN_Inspection__r.SPEN_Inspected_By__r.FirstName + &quot; &quot; +  SPEN_Inspection__r.SPEN_Inspected_By__r.LastName</formula>
    <label>Inspected By</label>
    <type>Text</type>
</CustomField>