force-app/main/default/objects/SPEN_Inspection_Item__c/fields/SPEN_Inspected_By_External__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Inspected_By_External__c</fullName>
    <formula>SPEN_Inspection__r.SPEN_Inspected_By_External__c</formula>
    <label>Inspected By (External)</label>
    <type>Text</type>
</CustomField>