force-app/main/default/objects/SPEN_Inspection_Item__c/fields/SPEN_Inspection__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Inspection__c</fullName>
    <description>Master detail to link Inspection Item to Inspection record.</description>
    <label>Inspection</label>
    <referenceTo>SPEN_Inspection__c</referenceTo>
    <relationshipLabel>Inspection Items</relationshipLabel>
    <relationshipName>Inspection_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>