force-app/main/default/objects/SPEN_Inspection_Item__c/fields/SPEN_Parent_Energy_Networks_ID__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Parent_Energy_Networks_ID__c</fullName>
    <formula>SPEN_Serialised_Product__r.SPEN_Parent_Energy_Networks_ID__c</formula>
    <label>Parent Energy Networks ID</label>
    <type>Text</type>
</CustomField>