force-app/main/default/objects/SPEN_Inspection_Item__c/fields/SPEN_Serialised_Product__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Serialised_Product__c</fullName>
    <description>Master detail to link Inspection Item to Serialised Product.</description>
    <label>Serialised Product</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Serialised Product is not a Compliance Stores record type.</errorMessage>
        <filterItems>
            <field>SerializedProduct.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Compliance Stores</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SerializedProduct</referenceTo>
    <relationshipLabel>Inspection Items</relationshipLabel>
    <relationshipName>Inspection_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>