force-app/main/default/objects/SPEN_Inspection_Item__c/validationRules/SPEN_VR_Inspection_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_VR_Inspection_Change</fullName>
    <active>true</active>
    <description>Validation rule to prevent users changing the inspection record linked to the inspection item record.</description>
    <errorConditionFormula>ISCHANGED( SPEN_Inspection__c )</errorConditionFormula>
    <errorDisplayField>SPEN_Inspection__c</errorDisplayField>
    <errorMessage>You cannot change the inspection record linked to this inspection item.</errorMessage>
</ValidationRule>