force-app/main/default/objects/SPEN_Inspection_Item__c/validationRules/SPEN_VR_Result_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_VR_Result_Change</fullName>
    <active>true</active>
    <description>Validation rule to prevent users changing the result on the inspection item record.</description>
    <errorConditionFormula>ISCHANGED(  SPEN_Result__c  )</errorConditionFormula>
    <errorDisplayField>SPEN_Result__c</errorDisplayField>
    <errorMessage>You cannot change the result on this inspection item.</errorMessage>
</ValidationRule>